[main] Added try catch to controller, auth tools + routes, updated prisma schema
