# apps/api/src/entities/auth/auth.router.ts
@@ -1,0 +1,11 @@
+import { Router } from 'express';
+import AuthController from './auth.controller';
+import { verifyToken } from '../../tools/auth.tools';
+
+const router = Router();
+
+router.post('/login', AuthController.login);
+router.post('/register', AuthController.register);
+router.get('/logout', verifyToken, AuthController.logout);
+
+export default router;
