# apps/api/src/entities/user/user.controller.ts
@@ -7,58 +7,86 @@ const prisma = new PrismaClient();
 
 export class UserController implements CRUDController {
     public static async getAll(req: Request, res: Response) {
-        const users = prisma.user.findMany({
-            select: {
-                password: false,
-            },
-        });
-        res.json(users);
+        try {
+            const users = prisma.user.findMany({
+                select: {
+                    password: false,
+                },
+            });
+            res.json(users);
+        } catch (error) {
+            res.status(500).json({ error: error.message });
+        }
     }
 
     public static async getOne(req: Request, res: Response) {
-        const { id } = req.params;
-        const user = await prisma.user.findFirst({
-            where: {
-                id: +id,
-            },
-            select: {
-                password: false,
-            },
-        });
-        res.json(user);
+        try {
+            const { id } = req.params;
+            const user = await prisma.user.findFirst({
+                where: {
+                    id: +id,
+                },
+                select: {
+                    password: false,
+                },
+            });
+            res.json(user);
+        } catch (error) {
+            res.status(500).json({
+                message: error.message,
+            });
+        }
     }
 
     public static async create(req: Request, res: Response) {
-        const { body } = req;
-        const user = await prisma.user.create({
-            data: {
-                ...body,
-            },
-        });
-        res.json(user);
+        try {
+            const { body } = req;
+            const user = await prisma.user.create({
+                data: {
+                    ...body,
+                },
+            });
+            res.json(user);
+        } catch (error) {
+            res.status(500).json({
+                message: error.message,
+            });
+        }
     }
 
     public static async update(req: Request, res: Response) {
-        const { id } = req.params;
-        const { body } = req;
-        const user = await prisma.user.update({
-            where: {
-                id: +id,
-            },
-            data: {
-                ...body,
-            },
-        });
-        res.json(user);
+        try {
+            const { id } = req.params;
+            const { body } = req;
+            const user = await prisma.user.update({
+                where: {
+                    id: +id,
+                },
+                data: {
+                    ...body,
+                },
+            });
+            res.json(user);
+        } catch (error) {
+            res.status(500).json({
+                message: error.message,
+            });
+        }
     }
 
     public static async delete(req: Request, res: Response) {
-        const { id } = req.params;
-        const user = await prisma.user.delete({
-            where: {
-                id: +id,
-            },
-        });
-        res.json(user);
+        try {
+            const { id } = req.params;
+            const user = await prisma.user.delete({
+                where: {
+                    id: +id,
+                },
+            });
+            res.json(user);
+        } catch (error) {
+            res.status(500).json({
+                message: error.message,
+            });
+        }
     }
 }
